--- a/Project07.ipynb
+++ b/Project07.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1IccviCXTbQ7o6l3QYfaRIgjE_4pstpF8",
-      "authorship_tag": "ABX9TyPwsfpfHwOf8ho4AJPSad9F",
+      "authorship_tag": "ABX9TyM0HppcYzi9orijXP5SG8Gf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -177,7 +177,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 505
+          "height": 467
         },
         "id": "6bWBap5cKr0r",
         "outputId": "f87ccaae-1dc8-4781-83e4-1f1f21a41587"
@@ -561,7 +561,7 @@
         "id": "keULqeGyKr_K",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 522
+          "height": 441
         },
         "outputId": "e542c411-68df-46ef-8f1f-da7ae60c8118"
       },
@@ -1752,37 +1752,10 @@
         "pip install category_encoders"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "03liKVfEp0m_",
-        "outputId": "17cb3dc5-e3cc-441a-d9e7-cb57f8473062"
+        "id": "03liKVfEp0m_"
       },
-      "execution_count": 57,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting category_encoders\n",
-            "  Downloading category_encoders-2.3.0-py2.py3-none-any.whl (82 kB)\n",
-            "\u001b[?25l\r\u001b[K     |████                            | 10 kB 18.7 MB/s eta 0:00:01\r\u001b[K     |████████                        | 20 kB 22.4 MB/s eta 0:00:01\r\u001b[K     |████████████                    | 30 kB 19.6 MB/s eta 0:00:01\r\u001b[K     |████████████████                | 40 kB 12.9 MB/s eta 0:00:01\r\u001b[K     |████████████████████            | 51 kB 5.8 MB/s eta 0:00:01\r\u001b[K     |████████████████████████        | 61 kB 6.2 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████    | 71 kB 5.6 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▉| 81 kB 6.2 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 82 kB 334 kB/s \n",
-            "\u001b[?25hRequirement already satisfied: scikit-learn>=0.20.0 in /usr/local/lib/python3.7/dist-packages (from category_encoders) (1.0.1)\n",
-            "Requirement already satisfied: statsmodels>=0.9.0 in /usr/local/lib/python3.7/dist-packages (from category_encoders) (0.10.2)\n",
-            "Requirement already satisfied: patsy>=0.5.1 in /usr/local/lib/python3.7/dist-packages (from category_encoders) (0.5.2)\n",
-            "Requirement already satisfied: pandas>=0.21.1 in /usr/local/lib/python3.7/dist-packages (from category_encoders) (1.1.5)\n",
-            "Requirement already satisfied: scipy>=1.0.0 in /usr/local/lib/python3.7/dist-packages (from category_encoders) (1.4.1)\n",
-            "Requirement already satisfied: numpy>=1.14.0 in /usr/local/lib/python3.7/dist-packages (from category_encoders) (1.19.5)\n",
-            "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.21.1->category_encoders) (2.8.2)\n",
-            "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.21.1->category_encoders) (2018.9)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from patsy>=0.5.1->category_encoders) (1.15.0)\n",
-            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from scikit-learn>=0.20.0->category_encoders) (3.0.0)\n",
-            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.7/dist-packages (from scikit-learn>=0.20.0->category_encoders) (1.1.0)\n",
-            "Installing collected packages: category-encoders\n",
-            "Successfully installed category-encoders-2.3.0\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1932,27 +1905,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### linear regression (+)"
-      ],
-      "metadata": {
-        "id": "CdZ9wpXirnpY"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "6Uuf3L1arq7z"
-      },
-      "execution_count": 78,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Random forest regressor"
+        "### Random forest regressor\n",
+        "raw & tuned\n",
+        "\n"
       ],
       "metadata": {
         "id": "LfWbNLZHsJq8"
@@ -1987,27 +1942,59 @@
     {
       "cell_type": "code",
       "source": [
+        "#raw rfregressor\n",
+        "rfregressor01 = make_pipeline(\n",
+        "    RandomForestRegressor()\n",
+        ")\n",
+        "\n",
+        "rfregressor01.fit(X_train, y_train)\n",
+        "\n",
+        "print('훈련 정확도', rfregressor01.score(X_train, y_train))\n",
+        "print('검증 정확도', rfregressor01.score(X_val, y_val))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0visfH3bvUiq",
+        "outputId": "a25c0157-affa-4e50-ebee-e9e713bb384f"
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "훈련 정확도 0.9951493159676414\n",
+            "검증 정확도 0.9917552659860793\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#이는 AI03기 분꺼 그대로 베껴온것 (심지어 파라미터 설정까지)\n",
-        "rfregressor = make_pipeline(\n",
+        "rfregressor02 = make_pipeline(\n",
         "    TargetEncoder(smoothing=150.0),\n",
         "    SimpleImputer(),\n",
         "    StandardScaler(),\n",
         "    RandomForestRegressor(n_estimators=200, max_depth=14, random_state=1)\n",
         ")\n",
         "\n",
-        "rfregressor.fit(X_train, y_train)\n",
+        "rfregressor02.fit(X_train, y_train)\n",
         "\n",
-        "print('훈련 정확도', rfregressor.score(X_train, y_train))\n",
-        "print('검증 정확도', rfregressor.score(X_val, y_val))"
+        "print('훈련 정확도', rfregressor02.score(X_train, y_train))\n",
+        "print('검증 정확도', rfregressor02.score(X_val, y_val))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3ekNy30RsSvB",
-        "outputId": "784c5eba-c83a-4117-ffa7-eb0987eea9f1"
+        "outputId": "3358dab3-eccd-4eaf-8d8d-3d67c2d7c24a"
       },
-      "execution_count": 80,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "stream",
@@ -2045,7 +2032,7 @@
       "metadata": {
         "id": "7GI2ykxLb7VF"
       },
-      "execution_count": 80,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -2094,7 +2081,7 @@
       "metadata": {
         "id": "Qx4c9rG5DeGn"
       },
-      "execution_count": 80,
+      "execution_count": 83,
       "outputs": []
     },
     {
